feat: Filter order by status, toatlPrice, test redis
