# controllers/productController.js
@@ -9,8 +9,7 @@ const Fuse = require("fuse.js");
 const productController = {
   getAllProduct: async (req, res) => {
     try {
-      let { page, pageSize, productName, origin, minPrice, maxPrice } =
-        req.query;
+      let { page, pageSize, name, origin, minPrice, maxPrice } = req.query;
       page = parseInt(page) || 1;
       pageSize = parseInt(pageSize) || 10;
 
@@ -63,12 +62,12 @@ const productController = {
         });
       }
 
-      if (productName) {
+      if (name) {
         const fuse = new Fuse(products, {
           keys: ["name"],
           threshold: 0.3,
         });
-        const result = fuse.search(productName).map((result) => result.item);
+        const result = fuse.search(name).map((result) => result.item);
 
         if (result.length === 0) {
           return res.status(404).json({
